<resources>
    <string name="app_name">Calendate</string>
    <string name="title_activity_detail">Event list</string>
    <string name="title_detailed_item">Event</string>
    <string name="facebook_application_id" translatable="false">1396048197146385</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1396048197146385</string>
    <string name="add_item_create_a_new_event">Create a new event</string>
    <string name="add_item_title">Title</string>
    <string name="add_item_description">Description</string>
    <string name="add_item_event_date">Event date:</string>
    <string name="add_item_pick_a_date">Pick a Date</string>
    <string name="add_item_alert_ahead">Reminders:</string>
    <string name="add_item_repeat">Repeat:</string>
    <string name="btn_save">Save</string>
    <string name="add_item_clear">Clear</string>
    <string-array name="count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="kind">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string-array name="repeat">
        <item>None</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>
    <string name="forgot_password_email_address">Email address</string>
    <string name="forgot_password_send">Send</string>
    <string name="forgot_password_title">Enter your email below  \n and the password will be send to you.</string>
    <string name="registration_username">Username</string>
    <string name="registration_password">Password</string>
    <string name="registration_repeat_password">Repeat password</string>
    <string name="registration_email_address">Email address</string>
    <string name="registration_register">Register</string>
    <string name="error_weak_password">Password is too weak</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="error_user_exists">User already exist</string>
    <string name="error_empty_fields">Fields can not be empty</string>
    <string name="error_mismatch_passwords">Passwords do not match</string>
    <string name="other_signin">Or sign in using:</string>
    <string name="registering">Registering...</string>
    <string name="button_title_title">Set a title for the category</string>
    <string name="button_title_hint">Title</string>
    <string name="button_title_set">Set</string>
    <string name="button_title_error">Maximum length exceeded</string>
    <string name="change_button_dialog_title">What would you like to do?</string>
    <string-array name="buttonOptions">
        <item>Change title</item>
        <item>Change Image</item>
    </string-array>
    <string-array name="itemOptions">
        <item>Share</item>
        <item>Delete</item>
    </string-array>
    <string name="login_error_title">Details incorrect</string>
    <string name="login_error_description">Unknown user or bad password.</string>
    <string name="login_error_try">Try again</string>
    <string name="login_error_forgot">Forgot password</string>
    <string name="back_twice">Press back again to exit</string>
    <string name="logging">Logging in...</string>
    <string name="btn_register">Don\'t have an account? Register here</string>
    <string name="btn_login">Login</string>
    <string name="sign_in_with_google">Google sign in</string>
    <string name="sign_in_with_facebook">Facebook sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="delete_event">Delete event</string>
    <string name="confirm_delete">Are you sure you want to delete the event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="btn_edit">Edit</string>
    <string name="not_in_use">Not in use</string>
    <string name="btn_set_time">Set time</string>
    <string name="add_item_time">Alert time:</string>
    <string name="google_login_msg">Logging in using Google account</string>
    <string name="permission_not_granted">Permissions has not been granted</string>
    <string name="network_error">No internet connection</string>
    <string name="error">Error</string>
    <string name="facebook_login_msg">Logging in using Facebook account</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_managment">Account managment</string>
    <string name="change_password">Change password</string>
    <string name="categories">Categories</string>
    <string name="calendar">Calendar</string>
    <string name="timeline">Timeline</string>
    <string name="facebook_login">Logging in using your Facebook account</string>
    <string name="str_continue">Continue</string>
    <string name="who_would_you_like_to_share_with">Who would you like to share with?</string>
    <string name="delete_title">Delete an event</string>
    <string name="friends">Friends</string>
    <string name="email_or_username">Username</string>
    <string name="add_friend">Add a friend</string>
    <string name="approve_send_request">Are you sure you want to send a friend request to</string>
    <string name="send_request">Send request</string>
    <string name="cancel">Cancel</string>
    <string name="request_sent">Friend request sent!</string>
    <string name="new_shared_event">New shared event</string>
    <string name="share_msg">has shared with you an event called</string>
    <string name="share_msg_2">Do you accept this event?</string>
    <string name="share_denied">You denied this event successfully</string>
    <string name="new_friend_msg">wants to add you as a friend.\nDo you confirm this request?</string>
    <string name="new_friend_title">New friend request</string>
    <string name="request_denied">You denied the request</string>
    <string name="already_friends">This user is already your friend</string>
    <string name="confirm">Confirm</string>
    <string name="delete_request">Delete request</string>
    <string name="note_share_msg">has shared with you and event.  Touch here to show it.</string>
    <string name="note_new_request">New friend request!</string>
    <string name="note_friend_msg">wants to be your friend.  Touch here to confirm or delete the request.</string>
    <string name="note_new_share">New shared event</string>
    <string name="menu_about">About</string>
    <string name="about">Thanks to Pixel Buddha from Flaticons.com for the icons.</string>
    <string name="no_events_text">You haven\'t created any events yet</string>
    <string name="no_friends_text">No friends yet</string>
    <string name="attach">Attach document or picture</string>
    <string name="attach_msg">Attach your document</string>
    <string name="documents">Attachments:</string>
    <string name="choose_files">choose files</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="cancel_friendship">Cancel friendship</string>
    <string name="cancel_friendship_msg">Cancel friendship with</string>
    <string name="event_count">Event Count:</string>
    <string name="terms_error">You must accept the terms of use</string>
    <string name="delete_account">Delete account</string>
    <string name="success_delete">User deleted successfully</string>
    <string name="accept_terms">I accept the terms of use</string>
    <string name="terms">Our terms of use</string>
    <string name="procceed">Continue</string>
    <string name="delete_warning">Pay attention! \n\n Proceeding will remove all of your data from Calendate.\n This is irreversible.</string>
    <string name="delete_account_title">Delete account</string>
    <string name="decline_terms">Decline</string>
    <string name="attention">Attention</string>
    <string name="anonymous_warning">Sign in anonymously means you won\'t be able the restore your data in case you reinstall Calendate.    Also, some of the features won\'t work.</string>
    <string name="anonymous_accept">OK, sign me in</string>
    <string name="anonymous_decline">Go back</string>
    <string name="anonymous_sign_in">Sign in without register</string>
    <string name="snackbar_category">Long press a category for options</string>
    <string name="snackbar_category_ok">GOT IT</string>
    <string name="register_account">Register anonymous account</string>
    <string name="registered">Congratulations! You are now registered!</string>
    <string name="accept_terms_request">Please accept our terms of use</string>
    <string name="anonymous_register_error">You already have a registered account. This is option is for anonymous users only</string>
    <string name="got_it">Got it</string>
    <string name="oops">Oops</string>
    <string name="friends_anonymous_error">You logged in as an anonymous user, therefore you are not able to use this features. Note that you can stop being anonymous at any time.</string>
    <string name="register_me">Register me!</string>
    <string name="bind_account">Bind account</string>
    <string name="different_credentials">Account doesn\'t exist. Please try again or sign in with a different provider.</string>
    <string name="login_error">Login error</string>
    <string name="proceed">Continue</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_alarm_service">No alarm service found on your device</string>
    <string name="reminder">Reminder -</string>
    <string name="touch_for_info">Touch for more info</string>
    <string name="large_files_err">Files too large!</string>
    <string name="file_location">Where is your file located?</string>
    <string name="register_title">Register</string>
    <string name="timeline_title">Timeline</string>
    <string name="categories_title">Categories</string>
    <string name="add_friend_title">Add friend</string>
    <string name="friends_title">Friends</string>
    <string name="intro_views">Different views</string>
    <string name="intro_views_desc">You can see your events divided into categories, on a calendar or even on a timeline</string>
    <string name="intro_categories">Customize Categories</string>
    <string name="intro_categories_desc">Long press a category to set your own title and icon \n Swipe to see more categories</string>
    <string name="intro_friends">Social calendar</string>
    <string name="intro_friends_desc">Add the close persons in your life and share your occasions with them \n Just swipe your events and send them away</string>
    <string name="successful_share">The event successfully shared!</string>
    <string name="new_event">New event</string>
    <string name="note_minute">minute</string>
    <string name="note_minutes">minutes</string>
    <string name="note_hour">hour</string>
    <string name="note_hours">hours</string>
    <string name="note_day">day</string>
    <string name="note_days">days</string>
    <string name="note_week">week</string>
    <string name="note_weeks">weeks</string>
    <string name="note_month">month</string>
    <string name="note_months">months</string>
    <string name="note_in">in</string>
</resources>