<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_buttons"
            android:icon="@drawable/ic_categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline"
            android:title="@string/timeline" />
    </group>

    <item android:title="@string/account_managment">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_friends"
                    android:icon="@drawable/ic_friends"
                    android:title="@string/friends" />

                <item
                    android:id="@+id/nav_delete"
                    android:icon="@drawable/ic_delete"
                    android:title="@string/delete_account" />

                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/sign_out" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_about">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>

</menu>
