<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.calendate.calendate.RegistrationActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/registration_username"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/registration_email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/registration_password"
        android:inputType="textPassword"
        android:layoutDirection="locale"
        android:textDirection="locale"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="7dp"

        android:ems="10"
        android:hint="@string/registration_repeat_password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnBind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bind_account"
        app:bootstrapBrand="regular"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvError"
        app:roundedCorners="true"
        app:showOutline="false" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0"
        android:textColor="#E00"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword2" />

    <Button
        android:id="@+id/btnGoogle"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in_with_google"
        app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBind" />


    <Button
        android:id="@+id/btnFacebook"
        style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sign_in_with_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
        app:layout_constraintTop_toTopOf="@+id/btnGoogle" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/terms"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

    <CheckBox
        android:id="@+id/cbTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/accept_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTerms" />

</android.support.constraint.ConstraintLayout>
