<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.calendate.calendate.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calendate_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textDirection="ltr" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/tilUsername"
        app:layout_constraintRight_toRightOf="@+id/tilUsername"
        app:layout_constraintTop_toBottomOf="@+id/tilUsername">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textDirection="ltr" />
    </android.support.design.widget.TextInputLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_login"
        app:bootstrapBrand="regular"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/btn_login"
        app:buttonMode="regular"
        app:layout_constraintLeft_toLeftOf="@+id/tilPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:roundedCorners="true"
        app:showOutline="false" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="-1dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_register"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnGoogle"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in_with_google"
        app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister" />


    <Button
        android:id="@+id/btnFacebook"
        style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sign_in_with_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
        app:layout_constraintTop_toTopOf="@+id/btnGoogle" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnAnonymous"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/anonymous_sign_in"
        app:bootstrapBrand="regular"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        app:roundedCorners="true"
        app:showOutline="false" />


</android.support.constraint.ConstraintLayout>
