<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_item_layout"
    tools:context="com.calendate.calendate.AddItemActivity" >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:padding="16dp" >

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_item_title"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/add_item_description"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/etTitle"
            app:layout_constraintEnd_toEndOf="@+id/etTitle"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_item_pick_a_date"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            android:layout_marginTop="3dp"
            app:layout_constraintStart_toStartOf="@+id/tvDescription"
            app:layout_constraintEnd_toStartOf="@+id/btnTime"
            android:layout_marginEnd="8dp" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_time"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false"
            app:layout_constraintTop_toTopOf="@+id/btnDate"
            app:layout_constraintEnd_toEndOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/tvAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_item_alert_ahead"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/btnDate"
            app:layout_goneMarginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />


        <TextView
            android:id="@+id/tvRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_repeat"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fabAdd"
            android:layout_marginStart="8dp" />

        <Spinner
            android:id="@+id/spnRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tvRepeat"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRepeat"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAlerts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btnDate"
            app:layout_constraintEnd_toEndOf="@+id/btnTime"
            app:layout_constraintTop_toBottomOf="@+id/tvAlert" >


        </android.support.v7.widget.RecyclerView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="@+id/rvAlerts"
            app:layout_constraintTop_toBottomOf="@+id/rvAlerts"
            app:srcCompat="@drawable/ic_add" />

        <ImageView
            android:id="@+id/ivAttach"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDoc"
            app:srcCompat="@drawable/ic_doc_add"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/rvDocs"
            android:layout_marginEnd="8dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvDocs"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivAttach"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivAttach" />

        <TextView
            android:id="@+id/tvDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spnRepeat"
            android:layout_marginTop="8dp"
            android:text="@string/documents"
            android:textColor="#000"
            android:textSize="18sp" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_check"
        android:layout_gravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>

